2014-10-06  Georg-Johann Lay  <avr@gjlay.de>

	Tweak skip instructions.

	* avr-insn.def: (CPSE, SBRC, SBRS, SBIC, SBIS):
	Add instruction variants for known skip of 1 resp. 2 words.
	* testavr.h (decoded_op.data_index): Rename to .id.
	(log_stat_guesses): Remove.
	* avrtest.c (leave): Handle varargs consistently.
	(bad_PC): New function.
	(func_EICALL/EIJMP, pop_PC, do_step): Use it.
	(skip_instruction_on_condition): Add size argument.
	Patch skip on the fly as skip offset is known.
	(func_CPSE/SBRC/SBRS/SBIC/SBIS): New variants to skip = 1,2 words.
	* logging.c (log_patch_mnemo): Handle new variants of: CPSE, SBRC,
	SBRS, SBIC, SBIS.
	(perf_function, log_dump_line): Clean up alog.stat stuff.
	(log_stat_guesses): Remove.
	* logging.h (alog_t.stat): Remove.

2014-10-06  Georg-Johann Lay  <avr@gjlay.de>

	Improve logging and support performance-meters.

	* logging.h: New file.
	* Makefile: Rename LOG_DUMP to AVRTEST_LOG.
	(logging.o): Depend on logging.h.
	* avrtest.c: Rename to LOG_DUMP to AVRTEST_LOG.
	Use log_append instead of log_add_reg_mov, log_add_immed.
	(leave) [-runtime]: Call log_stat_guesses.
	(execute): Call log_init.
	(named_port[]): New variable.
	(log_cpu_address, byte log_data_read_byte): New functions.
	(avrtest.h):New macros to support logging.
	* logging.c: Rename LOG_DUMP to AVRTEST_LOG.
	(stdarg.h, inttypes.h, logging.h): Include them.
	(log_data, cur_log_pos, log_during_perf, log_count, log_count_val)
	Move to...
	(alog): ...this new variable.
	(log_add_data): Replace by...
	(log_append): ...this new function.
	(log_put_bit): Rename to log_patch_mnemo.
	(log_add_immed, log_add_reg_mov, buf): Remove
	(log_add_data_mov): Use named_port to pretty print magic ports.
	(decode_avr_float, read_string, get_raw_value, do_log_dump)
	(log_init, log_stat_guesses): New functions.
	(print_tag, print_tags, minmax_update_double, perf_verbose_start)
	(perf_stat, perf_start, perf_stop, perf_dump): New functions.
	(perf_instruction): Use them.